force-app/main/default/objects/VesselContact__c/VesselContact__c.object-meta.xml
<CustomObject>
    <label>Vessel Contact</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Vessel Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vessel Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>