force-app/main/default/objects/VesselContact__c/fields/PDFAlert__c.field-meta.xml
<CustomField>
    <fullName>PDFAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Alert</label>
    <type>Checkbox</type>
</CustomField>