force-app/main/default/objects/VesselContact__c/fields/Vessel__c.field-meta.xml
<CustomField>
    <fullName>Vessel__c</fullName>
    <label>Vessel</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipLabel>Vessel Contacts</relationshipLabel>
    <relationshipName>VesselContacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>